--- a/.github/workflows/publish-to-testpypi.yml
+++ b/.github/workflows/publish-to-testpypi.yml
@@ -14,23 +14,32 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  build-and-publish:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v3
+
       - uses: actions/setup-python@v3
         with:
           python-version: 3.8
+
       - name: Install Poetry
         run: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python3
+
       - name: Add Poetry to path
         run: echo "${HOME}/.poetry/bin" >> $GITHUB_PATH
+
       - name: Install venv
         run: poetry install
-      - run: poetry config repositories.testpypi https://test.pypi.org/legacy/
-      - run: poetry config pypi-token.testpypi ${{ secrets.TEST_PYPI_API_KEY }}
-      - name: Publish package
+
+      - name: Add Test-PyPI repository to poetry config
+        run: poetry config repositories.testpypi https://test.pypi.org/legacy/
+
+      - name: Add Test-PyPI API token
+        run: poetry config pypi-token.testpypi ${{ secrets.TEST_PYPI_API_KEY }}
+
+      - name: Build and publish package to Test-PyPI
         run: poetry publish --build -r testpypi
