--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,16 +10,16 @@ authors = ["Philipp Oberdiek <git@oberdiek.net>"]
 
 [tool.poetry.dependencies]
 python = ">=3.6.2,<4"
-torch = "*"
-numpy = "*"
+torch = "^1.10.2"
+numpy = "^1.19.5"
 
 [tool.poetry.dev-dependencies]
-flake8 = "*"
-mypy = "*"
-pytest = "*"
-pytest-cov = "*"
-tox = "*"
-black = "*"
+flake8 = "^4.0.1"
+mypy = "^0.942"
+pytest = "^7.0.1"
+pytest-cov = "^3.0.0"
+tox = "^3.24.5"
+black = "^22.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
