--- a/.github/workflows/publish-to-testpypi.yml
+++ b/.github/workflows/publish-to-testpypi.yml
@@ -35,6 +35,15 @@ jobs:
       - name: Install venv
         run: poetry install
 
+      - name: Run Tests with pytest
+        run: poetry run pytest --cov=gradient_metrics --cov-report=term-missing --cov-fail-under=90 tests
+
+      - name: Run flake8
+        run: poetry run flake8 --max-line-length=88 --extend-exclude=.venv,venv
+
+      - name: Run mypy
+        run: mypy gradient_metrics
+
       - name: Add Test-PyPI repository to poetry config
         run: poetry config repositories.testpypi https://test.pypi.org/legacy/
 
