--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,4 +31,4 @@ jobs:
         run: poetry run flake8 --max-line-length=88 --extend-exclude=.venv,venv
 
       - name: Run mypy
-        run: mypy gradient_metrics
+        run: poetry run mypy gradient_metrics
