Update pytest call in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -5,5 +5,5 @@ skip_missing_interpreters = True
 [testenv]
 deps =
     -rrequirements-dev.txt
-commands = pytest --cov=gradient_metrics/ --cov-report=term-missing tests
+commands = pytest tests
 usedevelop = True
