--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ authors = ["Philipp Oberdiek <git@oberdiek.net>"]
 
 [tool.poetry.dependencies]
 python = ">=3.6.2,<4"
-torch = ">=0.4.0"
+numpy = "*"
+torch = ">=1.4.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
