--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,10 +28,14 @@ jobs:
         run: poetry install
 
       - name: Run Tests with pytest
-        run: poetry run pytest --cov=gradient_metrics/ --cov-report=term-missing tests
+        run: poetry run pytest --cov=gradient_metrics/ --cov-report=term-missing --cov-fail-under=90 tests
 
-      - name: Run flake8
-        run: poetry run flake8 --max-line-length=88 --extend-exclude=.venv,venv
+      - name: Lint with flake8
+        run: |
+          # stop the action if there are syntax errors or undefined variables
+          poetry run flake8 . --max-line-length=88 --extend-exclude=.venv,venv --select=E9,F63,F7,F82
+          # treat all errors as warnings
+          poetry run flake8 . --max-line-length=88 --extend-exclude=.venv,venv --count --exit-zero --max-complexity=10 --statistics
 
       - name: Run mypy
         run: poetry run mypy gradient_metrics
