--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,10 @@
 name: Test
 on:
-  pull_request:
-    types: 
-      - opened
-      - reopened
-      - ready_for_review
-
   workflow_dispatch:
+    inputs:
+      git-ref:
+        description: Git Ref (Optional)
+        required: false
 
 jobs:
   test:
@@ -14,6 +12,13 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
+        if: github.event.inputs.git-ref == ''
+
+      - name: Check out repository with specific ref
+        uses: actions/checkout@v3
+        if: github.event.inputs.git-ref != ''
+        with:
+          ref: ${{ github.event.inputs.git-ref }}
 
       - name: Set up python
         id: setup-python
