--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,10 +4,6 @@ on:
     types: [opened, ready_for_review, review_requested, reopened]
 
   workflow_dispatch:
-    inputs:
-      git-ref:
-        description: Git Ref (Optional)
-        required: false
 
 jobs:
   lint:
@@ -15,13 +11,6 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
-        if: github.event.inputs.git-ref == ''
-
-      - name: Check out repository with specific ref
-        uses: actions/checkout@v3
-        if: github.event.inputs.git-ref != ''
-        with:
-          ref: ${{ github.event.inputs.git-ref }}
 
       - name: Set up python
         id: setup-python
@@ -31,6 +20,17 @@ jobs:
 
       - name: Update pip
         run: python3 -m pip install --upgrade pip
+
+      - name: Get pip cache dir
+        id: pip-cache
+        run: |
+          echo "::set-output name=dir::$(pip cache dir)"
+
+      - name: pip cache
+        uses: actions/cache@v3
+        with:
+          path: ${{ steps.pip-cache.outputs.dir }}
+          key: ${{ runner.os }}-pip-${{ steps.setup-python.outputs.python-version }}-linting
 
       - name: Install flake8
         run: python3 -m pip install flake8
