--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ torch = ">=1.4.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.9.2"
+isort = "^5.10.1"
 mypy = "^0.942"
 pytest = "^7.0.1"
 pytest-cov = "^3.0.0"
@@ -35,3 +36,12 @@ check_untyped_defs = true
 warn_return_any = true
 show_error_codes = true
 warn_unused_ignores = true
+
+[tool.black]
+line-length = 88
+
+[tool.isort]
+profile = "black"
+force_sort_within_sections = true
+line_length = 88
+known_third_party = ["gradient_metrics"]
