--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ python = ">=3.6.2,<4"
 numpy = "*"
 torch = ">=1.4.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 flake8 = "^3.9.2"
 isort = "^5.10.1"
 mypy = "^0.942"
@@ -27,6 +27,8 @@ tox = "^3.24.5"
 black = "^22.3.0"
 Sphinx = "^4.5.0"
 sphinx-rtd-theme = "^1.0.0"
+commitizen = "^2.37.0"
+pre-commit = "^2.20.0"
 
 [tool.mypy]
 disallow_untyped_defs = true
@@ -45,3 +47,15 @@ profile = "black"
 force_sort_within_sections = true
 line_length = 88
 known_third_party = ["gradient_metrics"]
+
+[tool.commitizen]
+name = "cz_conventional_commits"
+version = "0.2.0"
+tag_format = "v$version"
+major_version_zero = true
+version_files = [
+    "pyproject.toml:^version"
+]
+update_changelog_on_bump = true
+changelog_incremental = true
+annotated_tag = true
