build: update dependencies and add poetry.lock

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,19 +13,19 @@ description = "Neural Network Gradient Metrics with PyTorch"
 authors = ["Philipp Oberdiek <git@oberdiek.net>"]
 
 [tool.poetry.dependencies]
-python = ">=3.6.2,<4"
-numpy = "*"
-torch = ">=1.4.0"
+python = ">=3.7,<4"
+numpy = "^1.21.1"
+torch = "^1.4.0"
 
 [tool.poetry.group.dev.dependencies]
-flake8 = "^3.9.2"
-isort = "^5.10.1"
-mypy = "^0.942"
-pytest = "^7.0.1"
-pytest-cov = "^3.0.0"
-tox = "^3.24.5"
-black = "^22.3.0"
-Sphinx = "^4.5.0"
+flake8 = "^5.0.4"
+isort = "^5"
+mypy = "^0.982"
+pytest = "^7.2.0"
+pytest-cov = "^4.0.0"
+tox = "^3.27.0"
+black = "^22.10.0"
+sphinx = "^4.3.2"
 sphinx-rtd-theme = "^1.0.0"
 commitizen = "^2.37.0"
 pre-commit = "^2.20.0"
