--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,17 +20,14 @@ torch = "^1.4.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.10.0"
-commitizen = "^2.37.0"
 flake8 = "^5.0.4"
 isort = "^5"
 mypy = "^0.982"
-pre-commit = "^2.20.0"
 pytest = "^7.2.0"
-pytest-cov = "^4.0.0"
+pytest-cov = {extras = ["toml"], version = "^4.0.0"}
 sphinx = "^4.3.2"
 sphinx-rtd-theme = "^1.0.0"
 toml = "^0.10.2"
-tox = "^3.27.0"
 
 [tool.mypy]
 disallow_untyped_defs = true
@@ -41,6 +38,17 @@ warn_return_any = true
 show_error_codes = true
 warn_unused_ignores = true
 
+[tool.pytest.ini_options]
+testpaths = [
+    "tests",
+]
+
+[tool.coverage.run]
+source = ["gradient_metrics"]
+
+[tool.coverage.report]
+fail_under = 95
+
 [tool.black]
 line-length = 88
 
@@ -48,18 +56,18 @@ line-length = 88
 profile = "black"
 force_sort_within_sections = true
 line_length = 88
-known_third_party = ["gradient_metrics"]
 
 [tool.commitizen]
-name = "cz_conventional_commits_ronmckay"
+name = "cz_conventional_commits"
 version = "0.2.0"
 tag_format = "v$version"
 major_version_zero = true
 version_files = [
-    "pyproject.toml:^version"
+    "pyproject.toml:^version",
+    "gradient_metrics/__init__.py:^__version__"
 ]
-update_changelog_on_bump = true
-changelog_incremental = true
+update_changelog_on_bump = false
+changelog_incremental = false
 annotated_tag = true
 use_shortcuts = true
 bump_message = "bump: Version $current_version → $new_version"
