--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,17 @@
 name: Test
 on:
   workflow_dispatch:
+    inputs:
+      ref:
+        description: "ref to test"
+        required: true
+        type: string
+
+  workflow_call:
+    inputs:
+      ref:
+        required: true
+        type: string
 
 jobs:
   test:
@@ -8,6 +19,8 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
+        with:
+          ref: "${{ inputs.ref }}"
 
       - name: Set up python
         id: setup-python
@@ -24,7 +37,7 @@ jobs:
       - name: Get poetry cache dir
         id: poetry-cache
         run: |
-          echo "::set-output name=dir::$(poetry config cache-dir)"
+          echo "dir=$(poetry config cache-dir)" >> $GITHUB_OUTPUT
 
       - name: Load cached venv
         id: cached-poetry-dependencies
@@ -34,33 +47,20 @@ jobs:
             ${{ steps.poetry-cache.outputs.dir }}
             .venv
             poetry.lock
-          key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('pyproject.toml') }}
+          key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('pyproject.toml', 'poetry.lock') }}-tests
 
       - name: Install dependencies
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
         run: poetry install --no-interaction --no-root
 
       - name: Install project
-        run: poetry install --no-interaction
-
-      - name: Lint with flake8
-        run: |
-          # stop the action if there are syntax errors or undefined variables
-          poetry run flake8 . --max-line-length=88 --extend-exclude=.venv,venv --select=E9,F63,F7,F82
-          # treat all errors as warnings
-          poetry run flake8 . --max-line-length=88 --extend-exclude=.venv,venv --count --exit-zero --max-complexity=10 --statistics
-
-      - name: Check format with black
-        run: poetry run black --check gradient_metrics tests
-
-      - name: Check format with isort
-        run: poetry run isort --check --settings-path pyproject.toml gradient_metrics tests
+        run: poetry install --no-interaction --only-root
 
       - name: Run mypy
         run: poetry run mypy gradient_metrics
 
       - name: Run Tests with pytest
-        run: poetry run pytest --cov=gradient_metrics/ --cov-report=term-missing --cov-fail-under=90 tests
+        run: poetry run pytest --cov
 
       - name: Build the package
         run: poetry build
