Add 'tests' tag to changelog config

--- a/.github/changelog-config.json
+++ b/.github/changelog-config.json
@@ -25,6 +25,10 @@
             "labels": ["performance"]
         },
         {
+            "title": "### 🧪 Tests",
+            "labels": ["tests"]
+        },
+        {
             "title": "### ⚙️ CI/CD",
             "labels": ["ci-cd"]
         },
