--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,10 +1,6 @@
 name: GitHub Pages
 
 on:
-  # Trigger the workflow if a new release got published
-  release:
-    types: [published]
-
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
     inputs:
@@ -30,20 +26,15 @@ jobs:
 
     steps:
       - name: Check out repository
-        if: github.event_name == 'release'
-        uses: actions/checkout@v3
-
-      - name: Check out repository
-        if: github.event_name == 'workflow_call' || github.event_name == 'workflow_dispatch'
         uses: actions/checkout@v3
         with:
           ref: "${{ inputs.ref }}"
 
       - name: Set up python
         id: setup-python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version-file: '.python-version'
 
       - name: Install and configure Poetry
         uses: snok/install-poetry@v1
