--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,11 @@ on:
         - 'PATCH'
         - 'MINOR'
         - 'MAJOR'
+      publish-gh-pages:
+        description: 'Should this new version be published to GitHub-Pages?'
+        required: false
+        type: boolean
+        default: false
 
 jobs:
   lint:
@@ -39,6 +44,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up python
+        id: setup-python
+        uses: actions/setup-python@v4
+        with:
+          python-version-file: '.python-version'
 
       - name: Install commitizen
         run: python3 -m pip install "commitizen~=2.39.1"
@@ -124,7 +135,7 @@ jobs:
       # as in the case of a hotfix e.g.
       - name: "Create Pull Request into main"
         if: ${{ !startsWith(github.ref_name, 'release/') }}
-        run: GH_TOKEN=${{ github.token }} gh pr create --base "main" --head "${{ steps.release_branch.outputs.name }}" --title "${{ steps.release_branch.outputs.name }} → main" --body-file "tmp-changelog.md"
+        run: GH_TOKEN=${{ github.token }} gh pr create --base "main" --head "${{ steps.release_branch.outputs.name }}" --title "Changelog v${{ steps.bump_version.outputs.version }}" --body-file "tmp-changelog.md"
 
   publish-to-testpypi:
     needs: create-release
@@ -139,3 +150,9 @@ jobs:
     with:
       ref: "v${{ needs.create-release.outputs.new_version }}"
     secrets: inherit
+
+  publish-to-gh-pages:
+    if: ${{ inputs.publish-gh-pages }}
+    uses: RonMcKay/gradient_metrics/.github/workflows/gh-pages.yml@main
+    with:
+      ref: "${{ github.sha }}"
