--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,19 +34,11 @@ jobs:
           virtualenvs-create: true
           virtualenvs-in-project: true
 
-      - name: Get poetry cache dir
-        id: poetry-cache
-        run: |
-          echo "dir=$(poetry config cache-dir)" >> $GITHUB_OUTPUT
-
       - name: Load cached venv
         id: cached-poetry-dependencies
         uses: actions/cache@v3
         with:
-          path: |
-            ${{ steps.poetry-cache.outputs.dir }}
-            .venv
-            poetry.lock
+          path: .venv
           key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('pyproject.toml', 'poetry.lock') }}-tests
 
       - name: Install dependencies
