--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,10 @@ sphinx = "^4.3.2"
 sphinx-rtd-theme = "^1.0.0"
 toml = "^0.10.2"
 
+[[tool.poetry.source]]
+name = "PyPI"
+priority = "primary"
+
 [tool.mypy]
 disallow_untyped_defs = true
 disallow_any_unimported = true
