--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ documentation = "https://ronmckay.github.io/gradient_metrics/"
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
 numpy = "^1.21.1"
-torch = ">=1.4.0,~2"
+torch = "2.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.9.1"
@@ -28,6 +28,10 @@ pytest-cov = {extras = ["toml"], version = "^4.0.0"}
 sphinx = "^4.3.2"
 sphinx-rtd-theme = "^1.0.0"
 toml = "^0.10.2"
+
+[[tool.poetry.source]]
+name = "PyPI"
+priority = "primary"
 
 [tool.mypy]
 disallow_untyped_defs = true
