--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,7 @@ documentation = "https://ronmckay.github.io/gradient_metrics/"
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
-numpy = "^1.21.1"
-torch = "2.0.0"
+torch = "^2.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.9.1"
